# teacher-training

./: .gitignore  .npmrc  design.md  index.html  package.json  plan.md  pnpm-lock.yaml  sample.xlsx  spec.md
.claude/: settings.local.json
docs/: USER_REVIEW_CHECKLIST.md
hwpx_template/: doc1.hwpx  doc3.hwpx  doc4.hwpx
pptx_template/: receipt.pptx
public/: completion_template.xlsx
public/templates/: attendance_capture.hwpx  attendance_summary.hwpx  attendance_time.hwpx  evaluation_summary.hwpx
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: attendanceDocuments.ts  cashReceipt.ts  completionDocument.ts  google.ts  preDocuments.ts  receipt.ts  sheet.ts  workflow.ts
src/ui/: App.tsx
xlsx_template/: 현금영수증 일괄발급 양식.xlsx
